# ImagesPrimitives

./: .gitignore  CMakeLists.txt  README.md
includes/: Approximator.h  Ellipse.h  Image.h  ImageUtils.h  Model.h  Point.h  RandomGenerator.h  Rasterizer.h  Scanline.h  Shape.h  ShapeGenerator.h  ShapeMutator.h  State.h  ThreadPool.h  Triangle.h  Utils.h  Vector.h  getopt.h
lib/EasyBMP_1.06/: EasyBMP.cpp  EasyBMP_BMP.h
src/: Point.cpp  Shape.cpp  Vector.cpp  getopt.cpp  main.cpp
